test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-5.xq
(:********************foo**** for ******* eq  $ ******foo**************:
( for : fooTest: K-ForExprPositionalVar-5       $                 :)
(: Written by: Frans for  Englich         for    let      $                :) ne  for 
(: Date: 2006-10-05T18:29:37+02:00        ne    let               :)
(: Purpose:  where The name for a positional variable ne  must be preceeded with foo for '$'. :)
(:******** let ******foo $ *** for ************** eq *******************:)
for  eq $a at  in 1foo return1